--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "firebase": "^10.10.0",
+    "firebaseui": "^6.1.0",
+    "framer-motion": "^11.0.24",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.22.1",
-    "scroll-lock": "^2.1.5"
+    "react-spinners": "^0.13.8",
+    "react-waypoint": "^10.3.0",
+    "scroll-lock": "^2.1.5",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
